--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             right: -5px; /* さらに右へ */
             top: 80%; /* 画面中央に固定 */
             transform: translateY(-50%) translateX(12px); /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #58453b;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -89,7 +89,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #58453b, #35271f);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -114,7 +114,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -140,12 +140,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #58453b;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #58453b;
         }
 
         input[type="text"],
@@ -471,7 +471,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #58453b;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -480,7 +480,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -496,11 +496,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #979797;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #979797;
         }
 
         @media (max-width: 768px) {
@@ -549,7 +549,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -653,7 +653,7 @@
   </div>
 </div>
 
-        <div class="label">　現在お怪我はおりますか？<span class="required">必須</span></div>
+        <div class="label">　現在お怪我はありますか？<span class="required">必須</span></div>
         <div class="chance-buttons">
             <button type="button" id="onechance" onclick="selectchance(this)">有り</button>
             <button type="button" id="twochance" onclick="selectchance(this)">無し</button>
@@ -946,7 +946,7 @@ const demandLines =
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート回答≫\n\n【疲れを感じる箇所】\n・${formData.priorityCount}\n\n【現在のお怪我】\n・${demandLines}\n\n【病気お怪我の既往歴】\n・${formData.chanceCount}\n\n【ご来店目的】\n・${formData.message}\n\n【妊娠に関して】\n・${formData.IntroductionCount}\n\n【ボディーケアのご経験】\n・${formData.deliveryCount}\n\n【お好みの力加減】\n・${formData.PowerCount}\n\n【もみ返しのご経験】\n・${formData.experienceCount}\n\n【備考】\n・${formData.message2}`
+                text: `≪アンケート回答≫\n\n【ご来店目的】\n・${formData.priorityCount}\n\n【疲れを感じる箇所】\n${demandLines}\n\n【現在のお怪我】\n・${formData.chanceCount}\n\n【病気お怪我の既往歴】\n・${formData.message}\n\n【妊娠に関して】\n・${formData.IntroductionCount}\n\n【ボディーケアのご経験】\n・${formData.deliveryCount}\n\n【お好みの力加減】\n・${formData.PowerCount}\n\n【もみ返しのご経験】\n・${formData.experienceCount}\n\n【備考】\n・${formData.message2}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。「OK」をタップしてください。');
