--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(10px);
             /* 中央配置と右ずらし */
-            background: #45c4b7;
+            background: #6f5031;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #45c4b7, #45c4b7);
+            background: linear-gradient(135deg, #6f5031, #473019);
             color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
@@ -123,7 +123,7 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -144,7 +144,7 @@
             padding: 3px 0;
             /* ← 内側の余白は最小限 */
             font-weight: 400;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -164,7 +164,7 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -184,7 +184,7 @@
             /* ← 枠の上に10pxの隙間 */
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -229,12 +229,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #45c4b7;
+            color: #6f5031;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #45c4b7;
+            border: 2px solid #6f5031;
         }
 
         input[type="text"],
@@ -469,7 +469,7 @@
             height: 60px;
             border: 5px solid rgba(255, 255, 255, 0.2);
             /* 薄い白で枠を柔らかく */
-            border-top-color: #00d1ff;
+            border-top-color: #6f5031;
             /* 明るい青で目立たせる */
             border-radius: 50%;
             /* 丸い形状 */
@@ -620,7 +620,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -667,7 +667,7 @@
         }
 
         .edit-button:hover {
-            background-color: #45c4b7;
+            background-color: #6f5031;
             color: #ffffff;
             /* ← 黒背景に合わせて文字色を白にすると視認性が上がります（任意） */
         }
@@ -676,7 +676,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #45c4b7;
+            border-color: #6f5031;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -701,13 +701,13 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #45c4b7;
+            background-color: #6f5031;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
-            background-color: #45c4b7;
+            background-color: #6f5031;
         }
 
         @media (max-width: 768px) {
@@ -730,7 +730,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
             /* 外側に色を追加 */
-            box-shadow: 0 0 0 3px #45c4b7
+            box-shadow: 0 0 0 3px #6f5031
         }
 
         /* 必須マークのスタイル */
@@ -874,7 +874,7 @@
             /* 内側に3pxのスペースをつける（中身がくっつかないように） */
             font-weight: 600;
             /* 文字を少し太くする（600は太さの目安） */
-            background-color: #45c4b7;
+            background-color: #6f5031;
             /* 背景の色をくすんだ緑にする */
             color: white;
             /* 文字の色を白にする */
@@ -1213,17 +1213,17 @@ function formatDateTime(dateTimeString) {
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const visitCountText = visitCount ? `・<span style="color:#45c4b7;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
-            const selectedMenuText = selectedMenu ? `<span style="color:#45c4b7;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
+            const visitCountText = visitCount ? `・<span style="color:#6f5031;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
+            const selectedMenuText = selectedMenu ? `<span style="color:#6f5031;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#45c4b7;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
+                ? `<span style="color:#6f5031;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
             const irradiationsText = irradiationsCount
-                ? `<span style="color:#45c4b7;"><strong>【オプション】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
+                ? `<span style="color:#6f5031;"><strong>【オプション】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
                 : '・オプション無し';
 
             // 所要時間を計算
@@ -1232,34 +1232,34 @@ function formatDateTime(dateTimeString) {
             let minutes = totalMinutes % 60;
 
             // 所要時間の表示形式：○○時間○○分
-            let totalTimeText = `・<span style="color:#45c4b7;"><strong>所要時間</strong></span>：${hours > 0 ? hours + '時間' : ''}${minutes}分`;
+            let totalTimeText = `・<span style="color:#6f5031;"><strong>所要時間</strong></span>：${hours > 0 ? hours + '時間' : ''}${minutes}分`;
 
             // 合計金額の表示
-            const totalAmountText = `・<span style="color:#45c4b7;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
+            const totalAmountText = `・<span style="color:#6f5031;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
 
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
-                ? `・<span style="color:#45c4b7;"><strong>第1希望日</strong></span><br>${formatDateTime(selectedDate1)}`
+                ? `・<span style="color:#6f5031;"><strong>第1希望日</strong></span><br>${formatDateTime(selectedDate1)}`
                 : '・第1希望日が未選択です';
 
             // 第2希望日が選択された場合の表示
             const selectedDate2 = document.getElementById('date2').value;
             const selectedDate2Text = selectedDate2
-                ? `・<span style="color:#45c4b7;"><strong>第2希望日</strong></span><br>${formatDateTime(selectedDate2)}`
+                ? `・<span style="color:#6f5031;"><strong>第2希望日</strong></span><br>${formatDateTime(selectedDate2)}`
                 : '・第2希望日が未選択です';
 
             // 第3希望日が選択された場合の表示
             const selectedDate3 = document.getElementById('date3').value;
             const selectedDate3Text = selectedDate3
-                ? `・<span style="color:#45c4b7;"><strong>第3希望日</strong></span><br>${formatDateTime(selectedDate3)}`
+                ? `・<span style="color:#6f5031;"><strong>第3希望日</strong></span><br>${formatDateTime(selectedDate3)}`
                 : '・第3希望日が未選択です';
 
 
             // 修正ボタン付きのHTMLを作成
             document.getElementById('displayInfo').innerHTML = `
         <div class="info-row">
-            <p><span style="color:#45c4b7;"><strong>【お名前】</strong></span><br>・${name}</p>
+            <p><span style="color:#6f5031;"><strong>【お名前】</strong></span><br>・${name}</p>
             <button class="edit-button" onclick="scrollToElement('name')">修正</button>
         </div>
         <hr>
